--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2022-05-31 18:06+0200\n"
+"POT-Creation-Date: 2022-06-07 16:35+0200\n"
 "PO-Revision-Date: 2022-01-03 20:04+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cs\n"
@@ -725,6 +725,10 @@ msgstr "Polymetal"
 #: app/models/locations/underground.py:73
 msgid "Siderite"
 msgstr "Siderit"
+
+#: app/models/locations/underground.py:74
+msgid "Gypsum"
+msgstr "Sádrovec"
 
 #: app/models/locations/urbex.py:12
 msgid "House"
